# Space-Hero

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: main.c  p_scene.c  p_scene.h
src/gfx/: p_window.c  p_window.h
src/utils/: p_math.c  p_math.h  p_types.h  p_utils.h
